# protoactor-rs

./: Cargo.toml  README.md
protoactor/: Cargo.toml  build.rs
protoactor/benches/: shared_dict.rs
protoactor/src/: actor.rs  context.rs  diagnostics.rs  lib.rs  message.rs  process.rs  system.rs
protoactor/src/context/: actor_context.rs
protoactor/src/message/: message_envelope.rs  protos.rs
protoactor/src/process/: actor_process.rs  registry.rs
protoactor/src/system/: config.rs
