[package]
name = "protoactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1"
tokio = { version = "1.21", features = ["sync", "io-util", "macros"] }
log = "0.4"
prost = "0.11"
chashmap = "2.2"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.21", features = ["rt-multi-thread"] }
criterion = "0.4"
uuid = { version = "1.2", features = ["v4"] }


[build-dependencies]
prost-build = "0.11"

[[bench]]
name = "shared_dict"
harness = false
